--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -157,7 +157,7 @@ blockquote {
       color: var(--global-theme-color);
       text-decoration: none;
     }
-  }
+}
 }
 
 
@@ -480,6 +480,32 @@ footer.sticky-bottom {
   }
 }
 
+// experience
+
+.experience {
+  h2.category {
+    color: var(--global-divider-color);
+    border-bottom: 1px solid var(--global-divider-color);
+    padding-top: 0.5rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    text-align: right;
+  }
+}
+.experience_card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  
+}
+.volunteer_card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  
+}
+.card_content {
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
 
 // Projects
 
