--- a/_layouts/about-custom.html
+++ b/_layouts/about-custom.html
@@ -50,7 +50,7 @@ layout: default
           <hr>
           <!-- News -->
           {% if page.news -%}
-            <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h2>
+            <h2>news</a></h2>
             {%- include news.html %}
           {%- endif %}
 
